# geneweb-contrib

./: .travis.yml  Makefile  README.md
ExportAscCSV/: ExportAscCSV.ml
check_base/: check_base.ml  dune
compact/: README.MD  compact.ml  dune  dune-project
dag2html/: dune  dune.sav  main.ml
fpla/: fpla.ml
gui/: dune  gui.ml
gwFix/: dune  gwFixBase.ml  gwFixBurial.ml  gwFixEvtSrc.ml  gwFixFromFile.ml  gwFixFromFileAlias.ml  gwFixFromFileDomicile.ml  gwFixY.ml
gwbase/: chkimg.ml  consmoy.ml  dune  geneanet.ml  gwBaseLib.ml  hist.ml  lune.ml  nbdesc.ml  popule.ml  probot.ml  selroySelect.ml  titres.ml
gwpublic/: dune  gwaccess.ml  gwaccess_util.ml  gwiftitles.ml  gwprivate.ml  gwpublic.ml  gwpublic1.ml  gwpublic2.ml  gwpublic2priv.ml
history/: convert_hist.ml  dune  fix_hist.ml  is_gw_plus.ml
i18n_check/: dune
insee/: .gitignore  InitCap.sql  PlaceNorme-alt1.sql  PlaceNorme-alt2.sql  PlaceNorme.sql  README.MD  adjust-PlaceNorm.sh  dune  get-COG.sh  get-files.sh  getPlaceLib.sql  insee.ml  insee.sh  load-COG.sql  load-SQL.sql  load-files.sh  mysql.sh  processTodo.sql  rapport.sh  rapportFormate.sh  reload-file.sh  remove2020.sh  run-ONE.sh  run-TODO.sh
jsonExport/: dune  gwJsonExport.ml  json.ml  json.mli
lex/: dune  lex_utils-2.ml  lex_utils-2.sh  lex_utils.ml  lex_utils.sh  lex_utils_2.ml  test.txt
misc/: dune  lower_string.ml
mostdesc/: mostdesc.ml
oneshot/: dune  gwBaseCompatiblePlus.ml  gwExportAscCSV.ml  gwFixAddEvent.ml  gwFixDateText.ml  gwFixDeletedIpers.ml  gwFixWrongPatch.ml  gwMostAsc.ml  gwRemoveImgGallery.ml
privacy/: gwaccess.ml  (+3 more)
(+42 files in other folders)
