; TOFIX_EXE := cleopatre popule modif

(executables
  (names   geneanet clavier hist chkimg consmoy lune titres nbdesc probot)
  (modules geneanet clavier hist chkimg consmoy lune titres nbdesc probot)
  (libraries
    geneweb
    geneweb.gwdb-legacy
    geneweb.sosa_zarith
    unix
  )
)

; FIXME
; (executables
;   (names   selroy)
;   (modules selroy selroySelect)
;   (libraries
;     geneweb
;     geneweb.gwdb-legacy
;     geneweb.gwu_lib
;     geneweb.sosa_zarith
;     unix
;   )
; )
